Create Post for remote users in both private and public visibility completed